--- a/public/static/auth.html
+++ b/public/static/auth.html
@@ -3,44 +3,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Sign Up - PointaFam</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background: linear-gradient(135deg, #4CAF50, #81C784);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .signup-card {
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            width: 100%;
+            padding: 2rem;
+        }
+
+        .input-field {
+            border: 1px solid #e2e8f0;
+            border-radius: 8px;
+            padding: 0.75rem;
+            width: 100%;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .input-field:focus {
+            border-color: #4CAF50;
+            box-shadow: 0 0 0 3px rgba(76, 175, 80, 0.2);
+        }
+
+        .signup-button {
+            background: #4CAF50;
+            color: white;
+            border-radius: 8px;
+            padding: 0.75rem;
+            width: 100%;
+            transition: background 0.3s ease;
+        }
+
+        .signup-button:hover {
+            background: #45a049;
+        }
+
+        .login-link {
+            color: #4CAF50;
+            transition: color 0.3s ease;
+        }
+
+        .login-link:hover {
+            color: #45a049;
+        }
+    </style>
+    <script>
+        async function handleSignUp(event) {
+            event.preventDefault();
+            const form = event.target;
+            const formData = new FormData(form);
+
+            if (formData.get('password') !== formData.get('confirm_password')) {
+                document.getElementById('signup-result').innerText = "Passwords do not match.";
+                return;
+            }
+
+            const response = await fetch('/api/signup', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    username: formData.get('username'),
+                    email: formData.get('email'),
+                    password: formData.get('password'),
+                    phoneNumber: formData.get('phoneNumber'),
+                    location: formData.get('location'),
+                    role: formData.get('role')
+                })
+            });
+
+            if (response.ok) {
+                const data = await response.json();
+                localStorage.setItem('userID', data.userID);
+                localStorage.setItem('token', data.token);
+                localStorage.setItem('role', data.role);
+                redirectToDashboard(data.role);
+            } else {
+                const error = await response.json();
+                document.getElementById('signup-result').innerText = `Error: ${error.error}`;
+            }
+        }
+
+        function redirectToDashboard(role) {
+            if (role === 'farmer') {
+                window.location.href = '/farmer/dashboard';
+            } else if (role === 'retailer') {
+                window.location.href = '/retailer/dashboard';
+            }
+        }
+    </script>
 </head>
-<body class="bg-gray-100 p-4">
-    <script src="/public/script/script.js"></script>
-    <div class="container mx-auto max-w-md bg-white rounded-lg shadow-md p-6">
-        <h1 class="text-3xl font-bold text-center mb-6">Sign Up</h1>
+<body>
+    <!-- Sign-Up Card -->
+    <div class="signup-card">
+        <!-- Logo and Title -->
+        <div class="text-center mb-6">
+            <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-16 mx-auto">
+            <h1 class="text-3xl font-bold mt-4">Create Your Account</h1>
+            <p class="text-gray-600">Join PointaFam to connect with farmers and retailers.</p>
+        </div>
+
+        <!-- Sign-Up Form -->
         <form id="signup-form" onsubmit="handleSignUp(event)">
             <div class="mb-4">
-                <input type="text" name="username" placeholder="Username" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                <input type="text" name="username" placeholder="Username" class="input-field" required>
             </div>
             <div class="mb-4">
-                <input type="email" name="email" placeholder="Email Address" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                <input type="email" name="email" placeholder="Email Address" class="input-field" required>
             </div>
             <div class="mb-4">
-                <input type="password" name="password" placeholder="Password" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                <input type="password" name="password" placeholder="Password" class="input-field" required>
             </div>
             <div class="mb-4">
-                <input type="password" name="confirm_password" placeholder="Confirm Password" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                <input type="password" name="confirm_password" placeholder="Confirm Password" class="input-field" required>
             </div>
             <div class="mb-4">
-                <input type="text" name="phoneNumber" placeholder="Phone Number" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
+                <input type="text" name="phoneNumber" placeholder="Phone Number" class="input-field">
             </div>
             <div class="mb-4">
-                <input type="text" name="location" placeholder="Location" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                <input type="text" name="location" placeholder="Location" class="input-field" required>
             </div>
             <div class="mb-4">
-                <select name="role" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                <select name="role" class="input-field" required>
                     <option value="">Select Role</option>
                     <option value="farmer">Farmer</option>
                     <option value="retailer">Retailer</option>
                 </select>
             </div>
-            <button type="submit" class="bg-blue-500 text-white p-3 rounded w-full hover:bg-blue-600 transition duration-200">Sign Up</button>
+            <button type="submit" class="signup-button">Sign Up</button>
         </form>
+
+        <!-- Error Message -->
         <div id="signup-result" class="mt-4 text-center text-red-500"></div>
-        <p class="mt-4 text-center">Already have an account? 
-           <a href="/login" class="text-blue-500 underline">Login here</a>
+
+        <!-- Login Link -->
+        <p class="mt-6 text-center text-gray-600">
+            Already have an account? 
+            <a href="/login" class="login-link">Login here</a>
         </p>
     </div>
 </body>
