--- a/public/static/farmer_dashboard.html
+++ b/public/static/farmer_dashboard.html
@@ -5,196 +5,183 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farmer Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
-        .content {
-            display: flex;
-            flex: 1;
-            overflow: hidden;
+            font-family: 'Inter', sans-serif;
         }
         .sidebar {
-            width: 250px;
-            background-color: #2d3748;
-            color: white;
-            flex-shrink: 0;
+            transition: all 0.3s ease;
         }
-        .main-content {
-            flex: 1;
-            overflow-y: auto;
+        .sidebar:hover {
+            box-shadow: 4px 0 15px rgba(0, 0, 0, 0.1);
+        }
+        .card {
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        }
+        .chart-container {
+            background: white;
+            border-radius: 12px;
             padding: 20px;
-        }
-        .header, .footer {
-            background-color: #2d3748;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-50">
     <!-- Header -->
-    <div class="header fixed top-0 left-0 right-0 z-10 flex items-center justify-between">
-        <a href="/">
+    <header class="fixed top-0 left-0 right-0 z-10 bg-white shadow-md flex items-center justify-between px-6 py-4">
+        <div class="flex items-center">
             <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
-        </a>
-        <h1 class="text-xl font-bold mx-auto">Farmer Dashboard</h1>
-        <div class="w-10"></div> <!-- Placeholder to balance the logo on the left -->
-    </div>
+            <h1 class="text-xl font-bold ml-4">Farmer Dashboard</h1>
+        </div>
+        <div class="flex items-center">
+            <button class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition duration-200">Notifications</button>
+            <img src="https://via.placeholder.com/40" alt="Profile" class="w-10 h-10 rounded-full ml-4 cursor-pointer">
+        </div>
+    </header>
 
     <!-- Content -->
-    <div class="content mt-16">
+    <div class="flex mt-16">
         <!-- Sidebar -->
-        <div class="sidebar p-6 shadow-md">
+        <aside class="sidebar w-64 bg-white h-screen p-6 shadow-md">
             <h2 class="text-2xl font-bold mb-6">Dashboard</h2>
             <ul>
-                <li class="mb-4"><a href="#overview" class="text-blue-300 hover:underline">Overview</a></li>
-                <li class="mb-4"><a href="javascript:void(0);" class="text-blue-300 hover:underline" onclick="toggleDropdown('add-product-form')">Add New Product</a></li>
-                <li class="mb-4"><a href="#inventory-tracking" class="text-blue-300 hover:underline">Inventory Tracking</a></li>
-                <li class="mb-4"><a href="#view-orders" class="text-blue-300 hover:underline">View Orders</a></li>
-                <li class="mb-4"><a href="#manage-profile" class="text-blue-300 hover:underline">Manage Profile</a></li>
-                <li class="mb-4"><a href="#my-products" class="text-blue-300 hover:underline">My Products</a></li>
+                <li class="mb-4">
+                    <a href="#overview" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
+                        <span class="mr-2">📊</span> Overview
+                    </a>
+                </li>
+                <li class="mb-4">
+                    <a href="#add-product" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
+                        <span class="mr-2">➕</span> Add Product
+                    </a>
+                </li>
+                <li class="mb-4">
+                    <a href="#inventory" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
+                        <span class="mr-2">📦</span> Inventory
+                    </a>
+                </li>
+                <li class="mb-4">
+                    <a href="#orders" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
+                        <span class="mr-2">📝</span> Orders
+                    </a>
+                </li>
+                <li class="mb-4">
+                    <a href="#profile" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
+                        <span class="mr-2">👤</span> Profile
+                    </a>
+                </li>
             </ul>
-        </div>
+        </aside>
 
         <!-- Main Content -->
-        <div class="main-content">
+        <main class="flex-1 p-8 overflow-y-auto">
             <!-- Overview Section -->
-            <div id="overview" class="mb-6">
-                <h2 class="text-2xl font-bold mb-4">Overview</h2>
-                <div class="grid grid-cols-3 gap-4">
-                    <div class="bg-white p-4 rounded-lg shadow-md">
-                        <h3 class="text-xl font-bold mb-2">Total Sales</h3>
-                        <p class="text-gray-600">$10,000</p>
+            <section id="overview" class="mb-8">
+                <h2 class="text-2xl font-bold mb-6">Overview</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                    <div class="card bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-lg font-semibold mb-2">Total Sales</h3>
+                        <p class="text-2xl font-bold text-blue-500">$10,000</p>
                     </div>
-                    <div class="bg-white p-4 rounded-lg shadow-md">
-                        <h3 class="text-xl font-bold mb-2">Recent Orders</h3>
-                        <p class="text-gray-600">5 new orders</p>
+                    <div class="card bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-lg font-semibold mb-2">Recent Orders</h3>
+                        <p class="text-2xl font-bold text-green-500">5</p>
                     </div>
-                    <div class="bg-white p-4 rounded-lg shadow-md">
-                        <h3 class="text-xl font-bold mb-2">Inventory Levels</h3>
-                        <p class="text-gray-600">20 items in stock</p>
+                    <div class="card bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-lg font-semibold mb-2">Inventory</h3>
+                        <p class="text-2xl font-bold text-purple-500">20 Items</p>
                     </div>
-                    <div class="bg-white p-4 rounded-lg shadow-md">
-                        <h3 class="text-xl font-bold mb-2">Notifications</h3>
-                        <p class="text-gray-600">2 new messages</p>
+                    <div class="card bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-lg font-semibold mb-2">Notifications</h3>
+                        <p class="text-2xl font-bold text-yellow-500">2</p>
                     </div>
                 </div>
-            </div>
+            </section>
 
-            <!-- Add New Product Section -->
-            <div id="add-product" class="mb-6">
-                <h2 class="text-2xl font-bold mb-4">Add New Product</h2>
-                <div id="add-product-form" class="hidden">
-                    <form id="create-product-form" onsubmit="handleFormSubmit(event, '/api/products', 'POST')" enctype="multipart/form-data">
-                        <input type="hidden" name="id">
-                        <div class="mb-4">
-                            <input type="text" name="name" placeholder="Product Name" class="border p-2 w-full rounded" required>
-                        </div>
-                        <div class="mb-4">
-                            <input type="text" name="description" placeholder="Product Description" class="border p-2 w-full rounded">
-                        </div>
-                        <div class="mb-4">
-                            <input type="number" step="0.01" name="price" placeholder="Product Price" class="border p-2 w-full rounded" required>
-                        </div>
-                        <div class="mb-4">
-                            <input type="number" name="quantity" placeholder="Product Quantity" class="border p-2 w-full rounded" required>
-                        </div>
-                        <div class="mb-4">
-                            <input type="file" name="image" class="border p-2 w-full rounded">
-                        </div>
-                        <div class="mb-4">
-                            <select name="category" class="border p-2 w-full rounded" required>
-                                <option value="">Select Category</option>
-                                <option value="fruits">Fruits</option>
-                                <option value="vegetables">Vegetables</option>
-                                <option value="dairy">Dairy</option>
-                                <option value="meat">Meat</option>
-                            </select>
-                        </div>
-                        <div class="mb-4">
-                            <input type="checkbox" name="availability" class="mr-2"> Available
-                        </div>
-                        <div class="mb-4">
-                            <input type="number" name="farm_id" placeholder="Farm ID" class="border p-2 w-full rounded">
-                        </div>
-                        <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Add Product</button>
-                    </form>
-                </div>
-                <div id="products-list">
-                    <!-- Products will be loaded here dynamically -->
-                </div>
-            </div>
-
-            <!-- My Products Section -->
-            <div id="my-products" class="mb-6">
-                <h2 class="text-2xl font-bold mb-4">My Products</h2>
-                <div id="my-products-list">
-                    <!-- My products will be loaded here dynamically -->
-                </div>
-            </div>
-
-            <!-- Inventory Tracking Section -->
-            <div id="inventory-tracking" class="mb-6">
-                <h2 class="text-2xl font-bold mb-4">Inventory Tracking</h2>
-                <div id="inventory-list">
-                    <!-- Inventory will be loaded here dynamically -->
-                </div>
-            </div>
-
-            <!-- View Orders Section -->
-            <div id="view-orders" class="mb-6">
-                <h2 class="text-2xl font-bold mb-4">View Orders</h2>
-                <div id="orders-list">
-                    <!-- Orders will be loaded here dynamically -->
-                </div>
-            </div>
-
-            <!-- Manage Profile Section -->
-            <div id="manage-profile" class="mb-6">
-                <h2 class="text-2xl font-bold mb-4">Manage Profile</h2>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <div class="flex items-center mb-4">
-                        <div class="relative">
-                            <img id="profile-picture" src="profile_picture_url" alt="Profile Picture" class="w-16 h-16 rounded-full mr-4 cursor-pointer" onclick="document.getElementById('profile-picture-input').click()">
-                            <input type="file" id="profile-picture-input" class="hidden" onchange="uploadProfilePicture(event)">
-                        </div>
-                        <div>
-                            <p id="user-username" class="text-lg font-bold">Loading...</p>
-                            <p id="user-email" class="text-gray-600">Loading...</p>
-                            <p id="user-location" class="text-gray-600">Loading...</p>
-                        </div>
+            <!-- Charts Section -->
+            <section class="mb-8">
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                    <div class="chart-container">
+                        <canvas id="salesChart"></canvas>
                     </div>
-                    <button onclick="toggleDropdown('edit-profile-form')" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 transition duration-200">Edit Profile</button>
-                    <button onclick="logout()" class="bg-red-500 text-white p-2 rounded hover:bg-red-600 transition duration-200 ml-4">Logout</button>
+                    <div class="chart-container">
+                        <canvas id="inventoryChart"></canvas>
+                    </div>
                 </div>
-            </div>
+            </section>
 
-            <!-- Edit Profile Form -->
-            <div id="edit-profile-form" class="hidden">
-                <form id="update-profile-form" onsubmit="handleProfileUpdate(event)">
-                    <div class="mb-4">
-                        <input type="text" id="edit-username" name="username" placeholder="Username" class="border p-2 w-full rounded" required>
-                    </div>
-                    <div class="mb-4">
-                        <input type="email" id="edit-email" name="email" placeholder="Email" class="border p-2 w-full rounded" required>
-                    </div>
-                    <div class="mb-4">
-                        <input type="text" id="edit-location" name="location" placeholder="Location" class="border p-2 w-full rounded" required>
-                    </div>
-                    <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Update Profile</button>
-                </form>
-            </div>
-        </div>
+            <!-- Recent Orders Section -->
+            <section id="orders" class="mb-8">
+                <h2 class="text-2xl font-bold mb-6">Recent Orders</h2>
+                <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                    <table class="w-full">
+                        <thead class="bg-gray-100">
+                            <tr>
+                                <th class="px-6 py-3 text-left">Order ID</th>
+                                <th class="px-6 py-3 text-left">Product</th>
+                                <th class="px-6 py-3 text-left">Quantity</th>
+                                <th class="px-6 py-3 text-left">Status</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="hover:bg-gray-50 transition duration-200">
+                                <td class="px-6 py-4">#1234</td>
+                                <td class="px-6 py-4">Organic Tomatoes</td>
+                                <td class="px-6 py-4">50kg</td>
+                                <td class="px-6 py-4 text-green-500">Shipped</td>
+                            </tr>
+                            <!-- Add more rows dynamically -->
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+        </main>
     </div>
 
     <!-- Footer -->
-    <div class="footer fixed bottom-0 left-0 right-0 z-10">
-        <p>&copy; 2025 PointaFam. All rights reserved.</p>
-    </div>
-    <script src="/public/script/script.js"></script>
+    <footer class="fixed bottom-0 left-0 right-0 bg-white shadow-md text-center py-4">
+        <p class="text-gray-600">&copy; 2025 PointaFam. All rights reserved.</p>
+    </footer>
+
+    <script>
+        // Chart.js Initialization
+        const salesChart = new Chart(document.getElementById('salesChart'), {
+            type: 'line',
+            data: {
+                labels: ['Jan', 'Feb', 'Mar', 'Apr', 'May'],
+                datasets: [{
+                    label: 'Sales',
+                    data: [5000, 7000, 12000, 9000, 11000],
+                    borderColor: '#3B82F6',
+                    fill: false,
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+            }
+        });
+
+        const inventoryChart = new Chart(document.getElementById('inventoryChart'), {
+            type: 'bar',
+            data: {
+                labels: ['Tomatoes', 'Potatoes', 'Carrots', 'Onions'],
+                datasets: [{
+                    label: 'Inventory',
+                    data: [200, 150, 100, 50],
+                    backgroundColor: '#8B5CF6',
+                }]
+            },
+            options: {
+                responsive: true,
+                maintainAspectRatio: false,
+            }
+        });
+    </script>
 </body>
 </html>
