--- a/public/static/login.html
+++ b/public/static/login.html
@@ -3,8 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login - PointaFam</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background: linear-gradient(135deg, #4CAF50, #81C784);
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .login-card {
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            width: 100%;
+            padding: 2rem;
+        }
+
+        .input-field {
+            border: 1px solid #e2e8f0;
+            border-radius: 8px;
+            padding: 0.75rem;
+            width: 100%;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .input-field:focus {
+            border-color: #4CAF50;
+            box-shadow: 0 0 0 3px rgba(76, 175, 80, 0.2);
+        }
+
+        .login-button {
+            background: #4CAF50;
+            color: white;
+            border-radius: 8px;
+            padding: 0.75rem;
+            width: 100%;
+            transition: background 0.3s ease;
+        }
+
+        .login-button:hover {
+            background: #45a049;
+        }
+
+        .register-link {
+            color: #4CAF50;
+            transition: color 0.3s ease;
+        }
+
+        .register-link:hover {
+            color: #45a049;
+        }
+    </style>
     <script>
         async function handleLogin(event) {
             event.preventDefault();
@@ -43,27 +98,34 @@
         }
     </script>
 </head>
-<body class="bg-gray-100 p-4">
-    <div class="header">
-        <a href="/">
-            <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo">
-        </a>
-        <span>PointaFam</span>
-    </div>
-    <div class="container mx-auto max-w-md bg-white rounded-lg shadow-md p-6">
-        <h1 class="text-3xl font-bold text-center mb-6">Login</h1>
+<body>
+    <!-- Login Card -->
+    <div class="login-card">
+        <!-- Logo and Title -->
+        <div class="text-center mb-6">
+            <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-16 mx-auto">
+            <h1 class="text-3xl font-bold mt-4">Welcome Back!</h1>
+            <p class="text-gray-600">Login to access your account.</p>
+        </div>
+
+        <!-- Login Form -->
         <form id="login-form" onsubmit="handleLogin(event)">
             <div class="mb-4">
-                <input type="email" name="email" placeholder="Email Address" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                <input type="email" name="email" placeholder="Email Address" class="input-field" required>
             </div>
-            <div class="mb-4">
-                <input type="password" name="password" placeholder="Password" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+            <div class="mb-6">
+                <input type="password" name="password" placeholder="Password" class="input-field" required>
             </div>
-            <button type="submit" class="bg-blue-500 text-white p-3 rounded w-full hover:bg-blue-600 transition duration-200">Login</button>
+            <button type="submit" class="login-button">Login</button>
         </form>
+
+        <!-- Error Message -->
         <div id="login-result" class="mt-4 text-center text-red-500"></div>
-        <p class="mt-4 text-center">Don't have an account? 
-           <a href="/auth" class="text-blue-500 underline">Register here</a>
+
+        <!-- Register Link -->
+        <p class="mt-6 text-center text-gray-600">
+            Don't have an account? 
+            <a href="/auth" class="register-link">Register here</a>
         </p>
     </div>
 </body>
