--- a/public/static/retailer_dashboard.html
+++ b/public/static/retailer_dashboard.html
@@ -3,128 +3,214 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Retailer Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         body {
-            display: flex;
-            flex-direction: column;
-            height: 100vh;
-        }
-        .content {
-            display: flex;
-            flex: 1;
-            overflow: hidden;
+            font-family: 'Inter', sans-serif;
         }
         .sidebar {
-            width: 250px;
-            background-color: #2d3748;
-            color: white;
-            flex-shrink: 0;
+            transition: all 0.3s ease;
         }
-        .main-content {
-            flex: 1;
-            overflow-y: auto;
-            padding: 20px;
+        .sidebar:hover {
+            box-shadow: 4px 0 15px rgba(0, 0, 0, 0.1);
         }
-        .header, .footer {
-            background-color: #2d3748;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
+        .card {
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
         }
-        .bg-agriculture {
-            background-image: url('/public/assets/agriculture-bg.jpg');
-            background-size: cover;
-            background-position: center;
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        }
+        .cart-page {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 400px;
+            height: 100vh;
+            background: white;
+            box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
+            transition: right 0.3s ease;
+            z-index: 1000;
+        }
+        .cart-page.open {
+            right: 0;
+        }
+        .overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+            display: none;
+        }
+        .overlay.active {
+            display: block;
         }
     </style>
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-50">
     <!-- Header -->
-    <div class="header fixed top-0 left-0 right-0 z-10 flex items-center justify-between">
-        <a href="/">
+    <header class="fixed top-0 left-0 right-0 z-10 bg-white shadow-md flex items-center justify-between px-6 py-4">
+        <div class="flex items-center">
             <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
-        </a>
-        <h1 class="text-xl font-bold mx-auto">Retailer Dashboard</h1>
-        <div class="w-10"></div> <!-- Placeholder to balance the logo on the left -->
+            <h1 class="text-xl font-bold ml-4">Retailer Dashboard</h1>
+        </div>
+        <div class="flex items-center">
+            <button class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition duration-200">Notifications</button>
+            <div class="relative ml-4 cursor-pointer" onclick="toggleCart()">
+                <i class="fas fa-shopping-cart text-2xl text-gray-700"></i>
+                <span id="cart-count" class="absolute top-0 right-0 bg-red-500 text-white text-xs rounded-full px-1">3</span>
+            </div>
+            <img src="https://via.placeholder.com/40" alt="Profile" class="w-10 h-10 rounded-full ml-4 cursor-pointer">
+        </div>
+    </header>
+
+    <!-- Cart Page -->
+    <div class="cart-page">
+        <div class="p-6">
+            <h2 class="text-2xl font-bold mb-6">My Cart</h2>
+            <div id="cart-items" class="space-y-4">
+                <!-- Cart items will be loaded here dynamically -->
+                <div class="cart-item flex items-center justify-between">
+                    <div>
+                        <h3 class="text-lg font-semibold">Organic Tomatoes</h3>
+                        <p class="text-gray-600">$5.99/kg</p>
+                    </div>
+                    <div class="flex items-center">
+                        <button class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600 transition duration-200" onclick="removeItem(this)">Remove</button>
+                        <input type="number" value="1" min="1" class="w-16 ml-4 p-1 border border-gray-300 rounded" onchange="updateQuantity(this)">
+                    </div>
+                </div>
+            </div>
+            <div class="mt-6">
+                <p class="text-xl font-bold">Total: $<span id="cart-total">17.97</span></p>
+                <button class="bg-green-500 text-white px-4 py-2 rounded-lg mt-4 w-full hover:bg-green-600 transition duration-200">Checkout</button>
+            </div>
+        </div>
     </div>
+
+    <!-- Overlay -->
+    <div class="overlay" onclick="toggleCart()"></div>
 
     <!-- Content -->
-    <div class="content mt-16">
+    <div class="flex mt-16">
         <!-- Sidebar -->
-        <div class="sidebar p-6 shadow-md">
+        <aside class="sidebar w-64 bg-white h-screen p-6 shadow-md">
             <h2 class="text-2xl font-bold mb-6">Dashboard</h2>
             <ul>
-                <li class="mb-4"><a href="javascript:void(0);" class="text-blue-300 hover:underline" onclick="showCart()">My Cart</a></li>
-                <li class="mb-4"><a href="javascript:void(0);" class="text-blue-300 hover:underline" onclick="loadProducts()">Available Products</a></li>
-                <li class="mb-4"><a href="javascript:void(0);" class="text-red-500 hover:underline" onclick="logout()">Logout</a></li>
+                <li class="mb-4">
+                    <a href="#overview" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
+                        <span class="mr-2">📊</span> Overview
+                    </a>
+                </li>
+                <li class="mb-4">
+                    <a href="#products" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
+                        <span class="mr-2">📦</span> Products
+                    </a>
+                </li>
+                <li class="mb-4">
+                    <a href="#profile" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
+                        <span class="mr-2">👤</span> Profile
+                    </a>
+                </li>
+                <li class="mb-4">
+                    <a href="#logout" class="flex items-center text-red-500 hover:text-red-600 transition duration-200">
+                        <span class="mr-2">🚪</span> Logout
+                    </a>
+                </li>
             </ul>
-        </div>
+        </aside>
 
         <!-- Main Content -->
-        <div class="main-content">
-
-            <div class="bg-agriculture p-6 rounded-lg shadow-md mb-6">
-                <h2 class="text-2xl font-bold">Welcome to your Dashboard</h2>
-                <p>Manage your products, view your cart, and update your profile.</p>
-            </div>
-
-            <div id="products-section" class="mb-6">
-                <h2 class="text-2xl font-bold mb-4">Available Products</h2>
-                <div class="mb-4">
-                    <label for="category" class="block text-gray-700">Select Category:</label>
-                    <select id="category" class="mt-1 block w-full p-2 border border-gray-300 rounded-md" onchange="loadProducts(this.value)">
-                        <option value="">All</option>
-                        <option value="vegetables">Vegetables</option>
-                        <option value="fruits">Fruits</option>
-                        <option value="dairy">Dairy</option>
-                    </select>
+        <main class="flex-1 p-8 overflow-y-auto">
+            <!-- Products Section -->
+            <section id="products" class="mb-8">
+                <h2 class="text-2xl font-bold mb-6">Available Products</h2>
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <div class="card bg-white p-6 rounded-lg shadow-md">
+                        <h3 class="text-lg font-semibold">Organic Tomatoes</h3>
+                        <p class="text-gray-600">Fresh, organic tomatoes from local farms.</p>
+                        <p class="text-xl font-bold text-green-500">$5.99/kg</p>
+                        <button class="bg-blue-500 text-white px-4 py-2 rounded-lg mt-4 hover:bg-blue-600 transition duration-200" onclick="addToCart('Organic Tomatoes', 5.99)">Add to Cart</button>
+                    </div>
+                    <!-- Add more products dynamically -->
                 </div>
-                <div id="products-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                </div>
-            </div>
+            </section>
+        </main>
+    </div>
 
-            <!-- User Profile Section -->
-            <div id="manage-profile" class="mb-6">
-                <h2 class="text-2xl font-bold mb-4">Manage Profile</h2>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <div class="flex items-center mb-4">
-                        <div class="relative">
-                            <img id="profile-picture" src="profile_picture_url" alt="Profile Picture" class="w-16 h-16 rounded-full mr-4 cursor-pointer" onclick="document.getElementById('profile-picture-input').click()">
-                            <input type="file" id="profile-picture-input" class="hidden" onchange="uploadProfilePicture(event)">
-                        </div>
+    <script>
+        // Cart Data
+        let cart = [
+            { name: 'Organic Tomatoes', price: 5.99, quantity: 3 }
+        ];
+
+        // Toggle Cart Page
+        function toggleCart() {
+            const cartPage = document.querySelector('.cart-page');
+            const overlay = document.querySelector('.overlay');
+            cartPage.classList.toggle('open');
+            overlay.classList.toggle('active');
+            updateCartDisplay();
+        }
+
+        // Update Cart Display
+        function updateCartDisplay() {
+            const cartItems = document.getElementById('cart-items');
+            const cartTotal = document.getElementById('cart-total');
+            const cartCount = document.getElementById('cart-count');
+            cartItems.innerHTML = '';
+            let total = 0;
+
+            cart.forEach((item, index) => {
+                total += item.price * item.quantity;
+                cartItems.innerHTML += `
+                    <div class="cart-item flex items-center justify-between">
                         <div>
-                            <p id="user-username" class="text-lg font-bold">Loading...</p>
-                            <p id="user-email" class="text-gray-600">Loading...</p>
-                            <p id="user-location" class="text-gray-600">Loading...</p>
+                            <h3 class="text-lg font-semibold">${item.name}</h3>
+                            <p class="text-gray-600">$${item.price.toFixed(2)}/kg</p>
+                        </div>
+                        <div class="flex items-center">
+                            <button class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600 transition duration-200" onclick="removeItem(${index})">Remove</button>
+                            <input type="number" value="${item.quantity}" min="1" class="w-16 ml-4 p-1 border border-gray-300 rounded" onchange="updateQuantity(${index}, this)">
                         </div>
                     </div>
-                    <button onclick="toggleDropdown('edit-profile-form')" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 transition duration-200">Edit Profile</button>
-                </div>
-            </div>
+                `;
+            });
 
-            <!-- Edit Profile Form -->
-            <div id="edit-profile-form" class="hidden">
-                <form id="update-profile-form" onsubmit="handleProfileUpdate(event)">
-                    <div class="mb-4">
-                        <input type="text" id="edit-username" name="username" placeholder="Username" class="border p-2 w-full rounded" required>
-                    </div>
-                    <div class="mb-4">
-                        <input type="email" id="edit-email" name="email" placeholder="Email" class="border p-2 w-full rounded" required>
-                    </div>
-                    <div class="mb-4">
-                        <input type="text" id="edit-location" name="location" placeholder="Location" class="border p-2 w-full rounded" required>
-                    </div>
-                    <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Update Profile</button>
-                </form>
-            </div>
-        </div>
-    </div>
+            cartTotal.textContent = total.toFixed(2);
+            cartCount.textContent = cart.length;
+        }
 
-    <!-- Footer -->
-    <div class="footer fixed bottom-0 left-0 right-0 z-10">
-        <p>&copy; 2025 PointaFam. All rights reserved.</p>
-    </div>
-    <script src="/public/script/script.js"></script>
+        // Add to Cart
+        function addToCart(name, price) {
+            const existingItem = cart.find(item => item.name === name);
+            if (existingItem) {
+                existingItem.quantity += 1;
+            } else {
+                cart.push({ name, price, quantity: 1 });
+            }
+            updateCartDisplay();
+        }
+
+        // Remove Item
+        function removeItem(index) {
+            cart.splice(index, 1);
+            updateCartDisplay();
+        }
+
+        // Update Quantity
+        function updateQuantity(index, input) {
+            cart[index].quantity = parseInt(input.value);
+            updateCartDisplay();
+        }
+
+        // Initialize Cart Display
+        updateCartDisplay();
+    </script>
 </body>
 </html>
